src/test/compile-fail/omitted-arg-in-item-fn.rs
// xfail-test

fn foo(x) { //~ ERROR expecting ':' but found ')'
}